Fix card overflow issues

--- a/styles/message_board.css
+++ b/styles/message_board.css
@@ -100,7 +100,6 @@ body {
 
 .card-description {
     width: 30%;
-    /* overflow: hidden; */
     text-overflow: ellipsis;
 }
 
@@ -113,6 +112,7 @@ body {
     background-color:#ffc107;
     text-align: center;
     white-space: nowrap;
+    min-width: 130px;
 }
 
 .card-description > p {
@@ -126,7 +126,11 @@ body {
 
 .card > h2 {
     width: 100%;
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    
 }
 
 
@@ -156,10 +160,6 @@ footer {
 
 @media (max-width: 900px) {
     
-    .card-description > h3 {
-        width: 100%;
-    }
-    
     .card-description > p {
         display: none;
     }
@@ -175,4 +175,9 @@ footer {
     .card {
         width: 90%;
     }
+}
+
+@media (max-width: 350px) {
+   
+
 }
